Ported to Comsat + Gradle